--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/image.png" alt="" /></a>
 								<h3>AGRI-GPT AI Powered disease detection and solution</h3>
-								<a href="https://c9rmpx964xrixxzovrnn5o.streamlit.app/" target="_blank" ><button class="button">Click!!</button></a>
+								<a href="https://arigpt-new.streamlit.app/" target="_blank" ><button class="button">Click!!</button></a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"> <img src="images/image 2.png" alt="" /></a>
-								<h3>Conversational RAG System- AI powered document interaction</h3>
-								<a href="https://pdfreader-with-chat-history-ypmcsly4kqb8da3iuoisfj.streamlit.app/" target="_blank" ><button class="button">Click!!</button></a>
+								<h3>AICSA: AI-POWERED CAREER & STUDY ASSISTANT </h3>
+								<a href="https://aicsaapp.streamlit.app/" target="_blank" ><button class="button">Click!!</button></a>
 
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
